resizing carrot image fixed cursor not showing up

--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -56,5 +56,5 @@ div.portrait {
   height: 400px;
   margin: auto;
   cursor: auto;
-  cursor: url("/assets/img/miscellaneous/carrot-solid.png"), auto;
+  cursor: url("/assets/img/miscellaneous/carrot-small.png"), auto;
 }
